--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,6 +2,7 @@
 @import '_normalizer.scss';
 @import '~antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
 
 html {
   box-sizing: border-box;
